--- a/index.html
+++ b/index.html
@@ -6,5 +6,14 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <img src="images/ratatouille.jpg" alt="Some Good Recipes">
+        <!-- ADD LINKS TO ALL MY RECIPES -->
+        
+        <h2>Good food:</h2>
+        <ul>
+            <li><a href="recipes/nepali-momo.html">Nepali Mo:mo</a></li>
+            <li><a href="recipes/butter-chicken.html">Butter Chicken</a></li>
+            <li><a href="recipes/roasted-garlic-parmesan-fingerling-potatoes.html">Roasted Garlic-Parmesan Fingerling Potatoes</a></li>
+        </ul>
     </body>
 </html>
