Add index and recipes html files with images of the recipes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <img src="images/ratatouille.jpg" alt="Some Good Recipes">
+        <img src="images/ratatouille.jpg" alt="Remy from Ratatouille">
+
+        <p><strong><em>"[Humans] don't just survive; they discover; they create. ... I mean, just look at what they do with food!" - Remy</em></strong></p>
         <!-- ADD LINKS TO ALL MY RECIPES -->
         
         <h2>Good food:</h2>
