Add CSS stylesheet to the project

--- a/recipes/nepali-momo.html
+++ b/recipes/nepali-momo.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Odin Recipes | Nepali Momo</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <h1>Nepali Momo</h1>
