--- a/recipes/roasted-garlic-parmesan-fingerling-potatoes.html
+++ b/recipes/roasted-garlic-parmesan-fingerling-potatoes.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Odin Recipes | Roasted Garlic-Parmesan Fingerling Potatoes</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <h1>Roasted Garlic-Parmesan Fingerling Potatoes</h1>
